# hades-system

./: .dockerignore  .gitignore  .gitleaks.toml  .goreleaser.yml  .goreleaserignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  THREAT_MODEL.md  go.mod  go.sum
plugin/hades/: __init__.py  _constants.py  conftest.py  hermes-config-snippet.yaml  plugin.yaml  pyproject.toml  requirements-dev.txt
plugin/hades/afk/: __init__.py  aggregator_consumer.py  audit.py  kg_offline_cache.py  mobile_summary.py  types.py  voice_flow.py
plugin/hades/commands/: __init__.py  _subprocess_handoff.py  amendment_ack.py  amendment_deny.py  amendment_list.py  amendment_show.py  audit_impact.py  brainstorm.py  dashboard.py  doctrine.py  doctrine_drift_check.py  execute_plan.py  full.py  handoff.py  impact_pre_merge.py  install_mcps.py  knowledge_promote.py  knowledge_query.py  openspec-apply.md  openspec-archive.md  openspec-propose.md  openspec-resume.md  openspec_apply.py  openspec_archive.py  openspec_propose.py  openspec_resume.py  panel.py  start.py  status.py  status_core.py  status_provider.py  voice.py  write_plan.py
plugin/hades/hooks/: __init__.py  _common.py  llm_handlers.py  session_handlers.py  tool_handlers.py  wizard_handler.py
plugin/hades/interactive/: __init__.py  inline_prompt.py
plugin/hades/providers/: __init__.py
plugin/hades/renderers/: __init__.py  email_citation.py  ink_citation.py  slack_citation.py  telegram_citation.py  types.py  voice_citation.py  web_citation.py
plugin/hades/skills/amendment/: SKILL.md
plugin/hades/skills/audit-impact/: SKILL.md
plugin/hades/skills/brainstorm/: SKILL.md
plugin/hades/skills/doctrine/: SKILL.md
plugin/hades/skills/doctrine-drift-check/: SKILL.md
plugin/hades/skills/execute-plan/: SKILL.md
plugin/hades/skills/hades/: SKILL.md
plugin/hades/skills/handoff/: SKILL.md
plugin/hades/skills/impact-pre-merge/: SKILL.md
plugin/hades/skills/knowledge-promote/: SKILL.md
plugin/hades/skills/knowledge-query/: SKILL.md
plugin/hades/skills/start/: SKILL.md
plugin/hades/skills/write-plan/: SKILL.md
plugin/hades/skins/: __init__.py  hades.py  palette.toml
plugin/hades/skins/assets/: hades_bident.txt  (+2 more)
plugin/hades/tests/: plugin_manifest_test.py  test_command_handlers.py  test_commands_brand.py  test_commands_handoff.py  test_commands_start.py  test_commands_status.py  test_dashboard.py  test_hooks_common.py  test_init_py_brand.py  test_init_py_namespace.py  test_inline_prompt.py  test_install_mcps.py  test_llm_handlers.py  test_panel.py  test_providers.py  test_register.py  test_register_ctx_extension.py  test_session_handlers.py  test_skills.py  test_skills_brand.py  test_status_core.py  test_status_provider.py  test_tool_handlers.py  test_transport_zen_swarm.py  test_wizard_handler.py
plugin/hades/transports/: __init__.py  hades_system_transport.py  zen_swarm_transport.py
(+3872 files in other folders)
